First friday 22.11.2013 commit

--- a/src/main/resources/com/example/simplejsf/messages_en.properties
+++ b/src/main/resources/com/example/simplejsf/messages_en.properties
@@ -8,5 +8,7 @@ lastName=last name
 numberOfCaps=number of caps
 avarageNumberOfGoals=avarage number of goals
 isInjured=is injured?
+id=id
 
 addFootballerSubmit=Add footballer
+deleteFootballer=Delete footballer
